# vibe

./: .env.example  .env.production  .gitignore  AGENTIC_FEATURES.md  AGI_OBSERVATIONS_SESSION_JAN10.md  AIRC_OVERVIEW.md  ALPHA_HANDOFF_FOR_TERMINAL.md  ALPHA_ONBOARDING.md  API_HEALTH_REPORT.md  BOARD_UPDATE_JAN12.md  CAMPAIGN_ROLLOUT_COMPLETE.md  CLAUDE.md  DEPLOYMENT_COMPLETE.md  FIRST_MESSAGES_NYE_2025.md  FUTURE_MULTIMODAL.md  LAUNCH_READINESS_AUDIT.md  NEXT_ITERATION_PLAN.md  NOTIFICATIONS_SPEC.md  NYE_2025_ACCOMPLISHMENTS.md  OBSERVATION_LOG.md  PLATFORM_HEALTH_SESSION_JAN11_2026.md  PRODUCT_SPEC.md  PROTOCOL_THINKING.md  QUICKSTART.md  RALPH_TWEETS.md  README.md  ROADMAP.md  SESSION_GRAPH_STRATEGY.md  SESSION_HANDOFF_JAN12.md  SESSION_NOTES.md  SESSION_RESUME.md  SESSION_SUMMARY_RALPH_JAN10.md  SOCIAL_SERVICES_STATUS.md  SPIRIT_AIRC_INTEGRATION_BRIEF.md  STATUS_JAN_2_2026.md  STRATEGY_JAN1.md  TERMINAL_INTEGRATION.md  TWEET_FINAL.md  VERIFY.md  VIBE_HEALTH_AUDIT_JAN12_2026.md  (+30 more)
.claude/: HANDOFF.md  settings.local.json
.ralph/: PROMPT.md
.well-known/: airc
agents/: cli.js  index.js  package.json
api/: artifacts-browse.js  board.js  claude-activity.js  discord-bridge.js  docs.js  echo.js  gigs.js  graph.js  install.js  invites.js  kv-test.js  messages.js  notifications.js  openapi.json  presence.js  profile.js  projects.js  stats.js  style-demo.js  telemetry.js  test-simple.js  users.js  version.js
gigabrain-mcp/: index.js  (+6 more)
src-tauri/: Cargo.toml
src-tauri/.claude/: settings.local.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs  pty.rs
(+147 files in other folders)
