[package]
name = "vibe"
version = "0.1.0"
description = "The Social CLI - Terminal with presence, sessions, and agents"
authors = ["Seth Goldstein"]
license = "MIT"
repository = "https://github.com/brightseth/vibe"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "notification-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
